--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ buildscript {
 apply plugin: 'net.minecraftforge.gradle.forge'
 
 
-version = "1.2.4"
+version = "1.3.0 Dev I"
 group = "chaos.mod"
 archivesBaseName = "EkiMod"
 
