--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,13 +1,13 @@
 modLoader="javafml"
 loaderVersion="[34,)"
 license="All rights reserved"
-issueTrackerURL="http://my.issue.tracker/"
+issueTrackerURL="https://github.com/ChAoSUnItY/EkiLib/issues"
 [[mods]]
 modId="eki"
-version="${file.jarVersion}"
+version="2.0.0"
 displayName="Eki Mod"
-updateJSONURL="http://myurl.me/"
-displayURL="http://example.com/"
+updateJSONURL="https://www.curseforge.com/minecraft/mc-mods/eki-mod"
+displayURL="https://www.curseforge.com/minecraft/mc-mods/eki-mod"
 logoFile="examplemod.png"
 credits="Those old texture / model contributors from 1.12.2 eki mod"
 authors="ChAoS_UnItY"
@@ -29,6 +29,6 @@ A new generation station decoration mod!
 [[dependencies.eki]]
     modId="eki_lib"
     mandatory=true
-    versionRange="(1.0.0, 2.0.0)"
+    versionRange="[1.0.2]"
     ordering="NONE"
     side="BOTH"
