--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ apply plugin: 'maven-publish'
 
 version = '2.0.0'
 group = 'com.chaos.eki' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = 'eki'
+archivesBaseName = 'Eki'
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 
@@ -81,7 +81,7 @@ repositories {
 dependencies {
     minecraft 'net.minecraftforge:forge:1.16.3-34.1.0'
 
-    compile fg.deobf('com.github.ChAoSUnItY:EkiLib:1.0.12')
+    compile fg.deobf('com.github.ChAoSUnItY:EkiLib:1.0.16')
 }
 
 jar {
