--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -17,6 +17,6 @@ A new generation station decoration mod!
 [[dependencies.eki]]
     modId="eki_lib"
     mandatory=true
-    versionRange="[1.0.11,)"
+    versionRange="[1.0.16]"
     ordering="NONE"
     side="BOTH"
