--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,6 +1,6 @@
 modLoader="javafml"
 loaderVersion="[34,)"
-license="All rights reserved"
+license="MIT"
 issueTrackerURL="https://github.com/ChAoSUnItY/EkiLib/issues"
 [[mods]]
 modId="eki"
@@ -8,7 +8,7 @@ version="2.0.0"
 displayName="Eki Mod"
 updateJSONURL="https://www.curseforge.com/minecraft/mc-mods/eki-mod"
 displayURL="https://www.curseforge.com/minecraft/mc-mods/eki-mod"
-logoFile="examplemod.png"
+logoFile="Eki_Logo.png"
 credits="Those old texture / model contributors from 1.12.2 eki mod"
 authors="ChAoS_UnItY"
 description='''
