--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,7 @@
 buildscript {
+    ext {
+        kotlin_version = "1.3.40"
+    }
     repositories {
         jcenter()
         maven { 
@@ -7,8 +10,10 @@ buildscript {
     }
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
+apply plugin: "kotlin"
 apply plugin: 'net.minecraftforge.gradle.forge'
 
 
@@ -27,7 +32,16 @@ minecraft {
     mappings = "snapshot_20171003"
 }
 
+repositories {
+    mavenCentral()
+    jcenter()
+    maven {
+        url "http://maven.shadowfacts.net/"
+    }
+}
+
 dependencies {
+    compile group: "net.shadowfacts", name: "Forgelin", version: "1.8.4"
 }
 
 processResources {
