--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
     }
 }
 apply plugin: 'net.minecraftforge.gradle.forge'
-
+apply plugin: 'scala'
 
 version = "1.3.3"
 group = "chaos.mod"
@@ -28,6 +28,11 @@ minecraft {
 }
 
 dependencies {
+}
+
+sourceSets {
+    main.scala.srcDirs = ["src/main/scala", "src/main/java"]
+    main.java.srcDirs = []
 }
 
 processResources {
